# ptils

./: README.rst  pyproject.toml  setup.cfg  tox.ini
ptils/: __init__.py  interpreter_convenience.py  profile.py  utils.py
ptils/cifar/: __main__.py
ptils/interpreter/: __init__.py  interpreter_funcs.py
ptils/path/: __init__.py  pathfuncs.py
ptils/print/: __init__.py  pretty_print_funcs.py
ptils/profile/: __init__.py  profilefuncs.py
