[metadata]
name = ptils
version = 0.0.2
author = James Calo
author_email = jamesafcalo@gmail.com
description = Python Utils
#long_description = file: README.rst
#long_description_content_type = text/x-rst
#url = https://github.com/SagaraBattousai/CEMake.git
classifiers = 
  Programming Language :: Python :: 3.6
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6,
install_requires =
  setuptools >= 57.0.0
  #distutils
include_package_data = True

[options.packages.find]
exclude = 
  tests
